# gformfiller

./: .gitignore  README.md  pyproject.toml
config/: constants.toml  logging.toml
docs/api/: README.md
docs/configuration/: USAGE.md
docs/driver/: README.md  USAGE.md
docs/dsl/: README.md  USAGE.md
docs/element_locators/: README.md  USAGE.md
src/gformfiller/: main.py
src/gformfiller/api/: auth.py  deps.py  fillers.py  inscriptions.py  notifications.py  profiles.py  system.py
src/gformfiller/cli/commands/: config.py
src/gformfiller/core/: auth_worker.py  constants.py  filler_worker.py
src/gformfiller/domain/: form_filler.py
src/gformfiller/domain/ai/: __init__.py  base.py  claude_client.py  constants.py  exceptions.py  gemini_client.py  openai_client.py
src/gformfiller/domain/responses/: __init__.py  base.py  checkbox.py  constants.py  date.py  exceptions.py  file_upload.py  listbox.py  radio.py  text.py  time.py
src/gformfiller/domain/schemas/: config.py  form_data.py  metadata.py
src/gformfiller/infrastructure/: auth_manager.py  config_manager.py  notif_manager.py
src/gformfiller/infrastructure/auth/: __init__.py  google_auth.py
src/gformfiller/infrastructure/config/: __init__.py  defaults.py  exceptions.py  initializer.py  loader.py  models.py  paths.py  validator.py
src/gformfiller/infrastructure/driver/: __init__.py  chromedriver.py  constants.py  exceptions.py  generics.py
src/gformfiller/infrastructure/dsl/: __init__.py  ast_nodes.py  evaluator.py  examples.py  exceptions.py  lexer.py  parser.py  tokens.py
src/gformfiller/infrastructure/element_locators/: __init__.py  constants.py  element_locator.py  exceptions.py
src/gformfiller/infrastructure/folder_manager/: __init__.py  constants.py  db_logger.py  manager.py
tests/: conftest.py
tests/unit/cli/commands/: test_config.py
tests/unit/infrastructure/: test_config_manager.py  test_folder_manager.py
tests/unit/infrastructure/config/: test_defaults.py  test_exceptions.py  test_initializer.py  test_loader.py  test_models.py  test_paths.py  test_validator.py
tests/unit/infrastructure/driver/: test_chromedriver.py
tests/unit/infrastructure/dsl/: test_evaluator.py  test_lexer.py  test_match.py  test_parser.py
(+1 files in other folders)
